<resources>
    <string name="app_name">MEMEBase</string>
    <string name="userId">Enter Email</string>
    <string name="userPassword">Enter User Password</string>
    <string name="userName">Enter User Name</string>
    <string name="submit">SUBMIT</string>
    <string name="signUp">REGISTER</string>
    <string name="logIn">LOGIN</string>
    <string name="selectVideo">SELECT VIDEO</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="instruct">Select any video of size above 10 MB \n and below 50 MB</string>
    <string name="logout">Are you sure you want \n to Logout?</string>
    <string name="sizeSpec">Please select video of specified size</string>
    <string name="compress_video">Compress Video</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="get_started">Get Started</string>
    <string name="create_your_account">Create your account</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="welcome">Welcome!</string>
    <string name="text_online">Online</string>
    <string name="text_offline">Offline</string>
    <string name="login_screen_text"><font color='#A1A4B2'>Don’t have an account?</font><font color='#8E97FD'> Sign Up</font></string>
    <string name="task">Task</string>
    <string name="event">Event</string>
    <string name="reminder">Reminder</string>
    <string name="open">Open</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="ten_mins_before">10 minutes before</string>
    <string name="thirty_mins_before">30 minutes before</string>
    <string name="one_hour_before">1 hour before</string>
    <string name="six_hours_before">6 hours before</string>
    <string name="one_day_before">1 day before</string>
    <string name="video_compressor">Video Compressor</string>
    <string name="about">About</string>
    <string name="about_msg">MEMEBase %s</string>
    <string name="skip">Skip</string>
</resources>