<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_30sdp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/_50sdp"
            android:paddingHorizontal="@dimen/_16sdp">

            <com.shashank.memebase.views.TaskyAppCompatEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:error="false"
                android:imeOptions="actionNext"
                app:drawableLast="@null"
                app:hint="@string/name"
                android:nextFocusDown="@id/et_email"
                android:focusableInTouchMode="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                tools:text="@string/app_name"/>

            <com.shashank.memebase.views.TaskyAppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:error="false"
                app:hint="@string/email_address"
                android:imeOptions="actionNext"
                app:drawableLast="@null"
                android:nextFocusUp="@id/et_name"
                android:nextFocusDown="@id/et_password"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                tools:text="@string/app_name"/>

            <com.shashank.memebase.views.TaskyAppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:error="false"
                android:inputType="textPassword"
                android:layout_marginTop="@dimen/_16sdp"
                app:hint="@string/password"
                android:imeOptions="actionDone"
                app:isPassword="true"
                app:drawableLast="@drawable/ic_password_text"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_email"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                tools:text="@string/app_name"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:text="@string/get_started"
                android:textColor="@color/button_text_selector"
                android:enabled="false"
                android:background="@drawable/button_selector"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>